demoPod/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demopod-deploy
  labels:
    app: demopod-app
  annotations:
spec:
  selector:
    matchLabels:
      app: demopod-app
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: demopod-app
    spec:
      containers:
      - name: demopod-app
        image: darkmtrance/demopod:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "10m"
          limits:
            memory: "256Mi"
            cpu: "500m"
