demoPod/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demopod-service
  labels:
    app: demopod-app
spec:
  selector:
    app: demopod-app
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
