demoPod/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demopod-ingress
  namespace: indra
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:    
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demopod-service
            port:
              number: 80
